Skills section updated in home page
Skills section updated in home page

--- a/experience.html
+++ b/experience.html
@@ -127,7 +127,7 @@
         </div>
     </div>
 
-    <!-- Work- Section 1 - Education -->
+    <!-- Work- Section 2 - Experience -->
     <div class="container custom-padding">
         <div class="row">
             <div class="col-12">
