--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
     </div>
 
     <!-- About Us- Section 2 - My Skills -->
-    <div class="container custom-padding">
+    <div class="container custom-padding ">
         <div class="row">
             <div class="col-12">
-                <h1 class="text-start text-sm-center  mb-3">My Skills</h1>
-                <h5 class="d-none d-sm-block text-start text-sm-center ">I possess a diverse range of skills and
+                <h1 class=" mb-3">My Skills</h1>
+                <h5 class="d-none d-sm-block text-start ">I possess a diverse range of skills and
                     expertise, including
                     effective
                     communication, problem-solving, leadership, adaptability, and a strong work ethic.</h5>
@@ -126,97 +126,200 @@
                     communication, problem-solving, leadership, adaptability, and a strong work ethic.</p>
             </div>
         </div>
-        <div class="row mt-5">
 
-            <div class="position-relative mb-3 col-6 col-md-4">
-                <p class="fw-bold mb-1 text_small">Adobe Photoshop</p>
-                <div class="progress mb-2" style="height:1.5rem;">
-                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-                        style="width: 85%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
-                        <span>85%</span>
-                    </div>
+        <!--Skill set 1-->
+        <div class="row mt-4 skills">
+            <div class="experience-bg row">
+                <div class="col-2 d-md-flex align-items-center">
+                    <h1 class=" extra_large fw-bold m-0 flip">01</h1>
                 </div>
-            </div>
-            <div class="position-relative mb-3 col-6 col-md-4">
-                <p class="fw-bold mb-1 text_small">Adobe Illustrator</p>
-                <div class="progress mb-2" style="height:1.5rem;">
-                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-                        style="width: 75%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
-                        <span>75%</span>
+                <div class="col-8">
+                    <h5 class="fw-bold m-0">Design</h5>
+                    <p class="mt-2 text-small">I admire clear content structures and tidy designs that make sense.</p>
+                    <div class="mt-4 ">
+                        <p class="fw-bold text-green m-0">Things I enjoy designing: </p>
+                        <p class="text_small "> UX, UI, Websites, Apps, Logos </p>
                     </div>
-                </div>
-            </div>
+                    <div class="mt-4 ">
+                        <p class="fw-bold text-green m-0">Design Tools: </p>
+                        <ul class="p-0 skill-tag ">
+                            <li class="d-flex flex-wrap align-items-center mt-2 ">
+                                <p class="text_small pe-2 fw-bold m-0"> UI Design </p>
+                                <p class="text_small pe-2 m-0"> Figma </p>
+                                <p class="text_small pe-2 m-0"> Balsamiq</p>
+                                <p class="text_small pe-2 m-0"> Wireframing</p>
+                                <p class="text_small pe-2 m-0"> Mockups</p>
+                                <p class="text_small pe-2 m-0"> Adobe Photoshop </p>
+                                <p class="text_small pe-2 m-0 "> Adobe XD </p>
+                                <p class="text_small pe-2 m-0"> Adobe Suit </p>
+                                <p class="text_small pe-2 m-0"> Prototyping </p>
+                            </li>
+                            <li class="d-flex flex-wrap  align-items-center mt-2">
+                                <p class="text_small pe-2 fw-bold m-0"> UX Design </p>
+                                <p class="text_small pe-2 m-0"> User Research</p>
+                                <p class="text_small pe-2 m-0"> Interaction Design </p>
+                                <p class="text_small pe-2 m-0"> Persona Development</p>
+                                <p class="text_small pe-2 m-0 "> Wireflow Creation</p>
+                                <p class="text_small pe-2 m-0"> Information Architecture </p>
+                                <p class="text_small pe-2 m-0"> User-Centric Design (UCD) </p>
+                            </li>
 
-            <div class="position-relative mb-3 col-6 col-md-4">
-                <p class="fw-bold mb-1 text_small">Adobe Indesign</p>
-                <div class="progress mb-2" style="height:1.5rem;">
-                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-                        style="width: 70%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
-                        <span>70%</span>
+                        </ul>
                     </div>
                 </div>
-            </div>
-
-            <div class="position-relative mb-3 col-6 col-md-4">
-                <p class="fw-bold mb-1 text_small">HTML 5</p>
-                <div class="progress mb-2" style="height:1.5rem;">
-                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-                        style="width: 90%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
-                        <span>90%</span>
-                    </div>
+                <div class="col-2 d-none d-sm-block">
+                    <svg id='patternId' width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'>
+                        <defs>
+                            <pattern id='a' patternUnits='userSpaceOnUse' width='48' height='48'
+                                patternTransform='scale(2) rotate(0)'>
+                                <rect x='0' y='0' width='100%' height='100%' fill='hsla(0, 0%, 99%, 1)' />
+                                <path
+                                    d='M5.323 7.811a10.233 10.233 0 01-11.77 0m60.894 0a10.234 10.234 0 01-11.77 0M-6.447 40.19a10.234 10.234 0 0111.77 0m37.354 0a10.235 10.235 0 0111.77 0m-24.562-7.817a10.234 10.234 0 01-11.77 0m0-16.746A10.234 10.234 0 0124 13.767c2.107 0 4.162.649 5.886 1.86'
+                                    stroke-linecap='square' stroke-width='1' stroke='hsla(209, 23%, 23%, 1)'
+                                    fill='none' />
+                                <path
+                                    d='M15.627 5.323a10.234 10.234 0 010-11.77m16.746 0a10.234 10.234 0 010 11.77M15.627 54.447a10.233 10.233 0 010-11.77m16.746 0a10.234 10.234 0 010 11.77m7.817-24.562a10.234 10.234 0 010-11.77m-32.379 0a10.234 10.234 0 010 11.771'
+                                    stroke-linecap='square' stroke-width='1' stroke='hsla(168, 100%, 36%, 1)'
+                                    fill='none' />
+                            </pattern>
+                        </defs>
+                        <rect width='800%' height='800%' transform='translate(0,0)' fill='url(#a)' />
+                    </svg>
                 </div>
-            </div>
-            <div class="position-relative mb-3 col-6 col-md-4">
-                <p class="fw-bold mb-1 text_small">CSS 3</p>
-                <div class="progress mb-2" style="height:1.5rem;">
-                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-                        style="width: 90%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
-                        <span>90%</span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="position-relative mb-3 col-6 col-md-4">
-                <p class="fw-bold mb-1 text_small">Javascript</p>
-                <div class="progress mb-2" style="height:1.5rem;">
-                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-                        style="width: 60%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
-                        <span>60%</span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="position-relative mb-3 col-6 col-md-4">
-                <p class="fw-bold mb-1 text_small">Figma</p>
-                <div class="progress mb-2" style="height:1.5rem;">
-                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-                        style="width: 85%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
-                        <span>85%</span>
-                    </div>
-                </div>
-            </div>
-            <div class="position-relative mb-3 col-6 col-md-4">
-                <p class="fw-bold mb-1 text_small">Balsamiq</p>
-                <div class="progress mb-2" style="height:1.5rem;">
-                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-                        style="width: 95%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
-                        <span>95%</span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="position-relative mb-3 col-6 col-md-4">
-                <p class="fw-bold mb-1 text_small">React JS</p>
-                <div class="progress mb-2" style="height:1.5rem;">
-                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-                        style="width: 50%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
-                        <span>50%</span>
-                    </div>
-                </div>
-
             </div>
         </div>
+
+        <!--Skill set 2-->
+        <div class="row mt-4 skills">
+            <div class="experience-bg row">
+                <div class="col-2 d-md-flex align-items-center">
+                    <h1 class=" extra_large fw-bold m-0 flip">02</h1>
+                </div>
+                <div class="col-8">
+                    <h5 class="fw-bold m-0">Development</h5>
+                    <p class="mt-2 text-small">I like to code things from scratch, and enjoy bringing ideas to life in
+                        the browser.</p>
+                    <div class="mt-4 ">
+                        <p class="fw-bold text-green m-0">Languages I speak: </p>
+                        <p class="text_small "> HTML, CSS, Bootstrap, Git</p>
+                    </div>
+                    <div class="mt-4 ">
+                        <p class="fw-bold text-green m-0">Tech Stack: </p>
+                        <ul class="p-0 skill-tag ">
+                            <li class="d-flex flex-wrap align-items-center mt-2 ">
+                                <p class="text_small pe-2 fw-bold m-0"> Web Technologies </p>
+                                <p class="text_small pe-2 m-0"> HTML / HTML 5</p>
+                                <p class="text_small pe-2 m-0"> CSS / CSS 3</p>
+                                <p class="text_small pe-2 m-0"> Bootstrap 5</p>
+                                <p class="text_small pe-2 m-0"> Javascript </p>
+                                <p class="text_small pe-2 m-0 "> Tailwind </p>
+                                <p class="text_small pe-2 m-0"> React JS </p>
+                                <p class="text_small pe-2 m-0"> Git</p>
+                                <p class="text_small pe-2 m-0"> RWD</p>
+                                <p class="text_small pe-2 m-0"> WordPress</p>
+                                <p class="text_small pe-2 m-0"> VS Code</p>
+                                <p class="text_small pe-2 m-0"> Sublime Text</p>
+                                <p class="text_small pe-2 m-0"> Cross Device Testing</p>
+                                <p class="text_small pe-2 m-0"> Cross Browser Testing</p>
+
+                            </li>
+                            <li class="d-flex flex-wrap  align-items-center mt-2">
+                                <p class="text_small pe-2 fw-bold m-0"> Database </p>
+                                <p class="text_small pe-2 m-0"> MySQL</p>
+                                <p class="text_small pe-2 m-0"> Oracle</p>
+                            </li>
+                            <li class="d-flex flex-wrap  align-items-center mt-2">
+                                <p class="text_small pe-2 fw-bold m-0"> Programming Languages </p>
+                                <p class="text_small pe-2 m-0"> Java</p>
+                                <p class="text_small pe-2 m-0"> C </p>
+                                <p class="text_small pe-2 m-0 "> C++</p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-2 d-none d-sm-block">
+                    <svg id='patternId' width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'>
+                        <defs>
+                            <pattern id='a' patternUnits='userSpaceOnUse' width='48' height='48'
+                                patternTransform='scale(2) rotate(0)'>
+                                <rect x='0' y='0' width='100%' height='100%' fill='hsla(0, 0%, 99%, 1)' />
+                                <path
+                                    d='M5.323 7.811a10.233 10.233 0 01-11.77 0m60.894 0a10.234 10.234 0 01-11.77 0M-6.447 40.19a10.234 10.234 0 0111.77 0m37.354 0a10.235 10.235 0 0111.77 0m-24.562-7.817a10.234 10.234 0 01-11.77 0m0-16.746A10.234 10.234 0 0124 13.767c2.107 0 4.162.649 5.886 1.86'
+                                    stroke-linecap='square' stroke-width='1' stroke='hsla(209, 23%, 23%, 1)'
+                                    fill='none' />
+                                <path
+                                    d='M15.627 5.323a10.234 10.234 0 010-11.77m16.746 0a10.234 10.234 0 010 11.77M15.627 54.447a10.233 10.233 0 010-11.77m16.746 0a10.234 10.234 0 010 11.77m7.817-24.562a10.234 10.234 0 010-11.77m-32.379 0a10.234 10.234 0 010 11.771'
+                                    stroke-linecap='square' stroke-width='1' stroke='hsla(168, 100%, 36%, 1)'
+                                    fill='none' />
+                            </pattern>
+                        </defs>
+                        <rect width='800%' height='800%' transform='translate(0,0)' fill='url(#a)' />
+                    </svg>
+                </div>
+            </div>
+        </div>
+
+        <!--Skill set 3-->
+        <div class="row mt-4 skills">
+            <div class="experience-bg row">
+                <div class="col-2 d-md-flex align-items-center">
+                    <h1 class=" extra_large fw-bold m-0 flip">03</h1>
+                </div>
+                <div class="col-8">
+                    <h5 class="fw-bold m-0">Project Management</h5>
+                    <p class="mt-2 text-small">I enjoy planning projects, collaborating, and resolving conflicts.</p>
+                    <div class="mt-4 ">
+                        <p class="fw-bold text-green m-0">Experiences I draw from: </p>
+                        <p class="text_small "> UX, UI, Web Development, Freelancing</p>
+                    </div>
+                    <div class="mt-4 ">
+                        <p class="fw-bold text-green m-0">Skills Suite: </p>
+                        <ul class="p-0 skill-tag ">
+                            <li class="d-flex flex-wrap align-items-center mt-2 ">
+                                <p class="text_small pe-2 fw-bold m-0"> Project Management </p>
+                                <p class="text_small pe-2 m-0"> Clickup</p>
+                                <p class="text_small pe-2 m-0"> Slack</p>
+                                <p class="text_small pe-2 m-0"> Stakeholder Communication </p>
+                                <p class="text_small pe-2 m-0"> Task Delegation</p>
+                                <p class="text_small pe-2 m-0"> Conflict Resolution</p>
+                                <p class="text_small pe-2 m-0"> Agile Project Management</p>
+                            </li>
+                            <li class="d-flex flex-wrap  align-items-center mt-2">
+                                <p class="text_small pe-2 fw-bold m-0"> Client-Facing Experience </p>
+                                <p class="text_small pe-2 m-0"> User Feedback Integration</p>
+                                <p class="text_small pe-2 m-0"> Client Satisfaction Metrics</p>
+                                <p class="text_small pe-2 m-0 "> Conflict Resolution</p>
+                                <p class="text_small pe-2 m-0"> Understanding Client Requirements </p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-2 d-none d-sm-block">
+                    <svg id='patternId' width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'>
+                        <defs>
+                            <pattern id='a' patternUnits='userSpaceOnUse' width='48' height='48'
+                                patternTransform='scale(2) rotate(0)'>
+                                <rect x='0' y='0' width='100%' height='100%' fill='hsla(0, 0%, 99%, 1)' />
+                                <path
+                                    d='M5.323 7.811a10.233 10.233 0 01-11.77 0m60.894 0a10.234 10.234 0 01-11.77 0M-6.447 40.19a10.234 10.234 0 0111.77 0m37.354 0a10.235 10.235 0 0111.77 0m-24.562-7.817a10.234 10.234 0 01-11.77 0m0-16.746A10.234 10.234 0 0124 13.767c2.107 0 4.162.649 5.886 1.86'
+                                    stroke-linecap='square' stroke-width='1' stroke='hsla(209, 23%, 23%, 1)'
+                                    fill='none' />
+                                <path
+                                    d='M15.627 5.323a10.234 10.234 0 010-11.77m16.746 0a10.234 10.234 0 010 11.77M15.627 54.447a10.233 10.233 0 010-11.77m16.746 0a10.234 10.234 0 010 11.77m7.817-24.562a10.234 10.234 0 010-11.77m-32.379 0a10.234 10.234 0 010 11.771'
+                                    stroke-linecap='square' stroke-width='1' stroke='hsla(168, 100%, 36%, 1)'
+                                    fill='none' />
+                            </pattern>
+                        </defs>
+                        <rect width='800%' height='800%' transform='translate(0,0)' fill='url(#a)' />
+                    </svg>
+
+                </div>
+            </div>
+        </div>
+
+
     </div>
+
 
 
     <!-- About Us- Section 3 - You are in good company -->
