--- a/index-serviceTest.html
+++ b/index-serviceTest.html
@@ -168,22 +168,22 @@
                     </div>
                 </div>
                 <div class="col-2 d-none d-sm-block">
-                    <svg id='patternId' width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'>
+                    <svg width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'>
                         <defs>
-                            <pattern id='a' patternUnits='userSpaceOnUse' width='48' height='48'
+                            <pattern id='patternDesign' patternUnits='userSpaceOnUse' width='48' height='48'
                                 patternTransform='scale(2) rotate(0)'>
                                 <rect x='0' y='0' width='100%' height='100%' fill='hsla(0, 0%, 99%, 1)' />
                                 <path
                                     d='M5.323 7.811a10.233 10.233 0 01-11.77 0m60.894 0a10.234 10.234 0 01-11.77 0M-6.447 40.19a10.234 10.234 0 0111.77 0m37.354 0a10.235 10.235 0 0111.77 0m-24.562-7.817a10.234 10.234 0 01-11.77 0m0-16.746A10.234 10.234 0 0124 13.767c2.107 0 4.162.649 5.886 1.86'
-                                    stroke-linecap='square' stroke-width='1' stroke='hsla(209, 23%, 23%, 1)'
+                                    stroke-linecap='square' stroke-width='1' stroke='hsla(168, 100%, 36%, 1)'
                                     fill='none' />
                                 <path
                                     d='M15.627 5.323a10.234 10.234 0 010-11.77m16.746 0a10.234 10.234 0 010 11.77M15.627 54.447a10.233 10.233 0 010-11.77m16.746 0a10.234 10.234 0 010 11.77m7.817-24.562a10.234 10.234 0 010-11.77m-32.379 0a10.234 10.234 0 010 11.771'
-                                    stroke-linecap='square' stroke-width='1' stroke='hsla(168, 100%, 36%, 1)'
+                                    stroke-linecap='square' stroke-width='1' stroke='hsla(209, 23%, 23%, 1)'
                                     fill='none' />
                             </pattern>
                         </defs>
-                        <rect width='800%' height='800%' transform='translate(0,0)' fill='url(#a)' />
+                        <rect width='800%' height='800%' transform='translate(0,0)' fill='url(#patternDesign)' />
                     </svg>
                 </div>
             </div>
@@ -238,22 +238,18 @@
                     </div>
                 </div>
                 <div class="col-2 d-none d-sm-block">
-                    <svg id='patternId' width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'>
+                    <svg width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'>
                         <defs>
-                            <pattern id='a' patternUnits='userSpaceOnUse' width='48' height='48'
+                            <pattern id='patternDev' patternUnits='userSpaceOnUse' width='40' height='40'
                                 patternTransform='scale(2) rotate(0)'>
                                 <rect x='0' y='0' width='100%' height='100%' fill='hsla(0, 0%, 99%, 1)' />
-                                <path
-                                    d='M5.323 7.811a10.233 10.233 0 01-11.77 0m60.894 0a10.234 10.234 0 01-11.77 0M-6.447 40.19a10.234 10.234 0 0111.77 0m37.354 0a10.235 10.235 0 0111.77 0m-24.562-7.817a10.234 10.234 0 01-11.77 0m0-16.746A10.234 10.234 0 0124 13.767c2.107 0 4.162.649 5.886 1.86'
-                                    stroke-linecap='square' stroke-width='1' stroke='hsla(209, 23%, 23%, 1)'
-                                    fill='none' />
-                                <path
-                                    d='M15.627 5.323a10.234 10.234 0 010-11.77m16.746 0a10.234 10.234 0 010 11.77M15.627 54.447a10.233 10.233 0 010-11.77m16.746 0a10.234 10.234 0 010 11.77m7.817-24.562a10.234 10.234 0 010-11.77m-32.379 0a10.234 10.234 0 010 11.771'
-                                    stroke-linecap='square' stroke-width='1' stroke='hsla(168, 100%, 36%, 1)'
-                                    fill='none' />
+                                <path d='M15 22h10m-10-4h10M35 2h10M35 38h10m-50 0H5M-5 2H5' stroke-linecap='square'
+                                    stroke-width='1' stroke='hsla(168, 100%, 36%, 1)' fill='none' />
+                                <path d='M18-5V5m4-10V5m16 10v10M18 35v10m4-10v10M2 15v10' stroke-linecap='square'
+                                    stroke-width='1' stroke='hsla(209, 23%, 23%, 1)' fill='none' />
                             </pattern>
                         </defs>
-                        <rect width='800%' height='800%' transform='translate(0,0)' fill='url(#a)' />
+                        <rect width='800%' height='800%' transform='translate(0,0)' fill='url(#patternDev)' />
                     </svg>
                 </div>
             </div>
@@ -295,24 +291,20 @@
                     </div>
                 </div>
                 <div class="col-2 d-none d-sm-block">
-                    <svg id='patternId' width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'>
+                    <svg width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'>
                         <defs>
-                            <pattern id='a' patternUnits='userSpaceOnUse' width='48' height='48'
+                            <pattern id='patternPM' patternUnits='userSpaceOnUse' width='32' height='32'
                                 patternTransform='scale(2) rotate(0)'>
                                 <rect x='0' y='0' width='100%' height='100%' fill='hsla(0, 0%, 99%, 1)' />
-                                <path
-                                    d='M5.323 7.811a10.233 10.233 0 01-11.77 0m60.894 0a10.234 10.234 0 01-11.77 0M-6.447 40.19a10.234 10.234 0 0111.77 0m37.354 0a10.235 10.235 0 0111.77 0m-24.562-7.817a10.234 10.234 0 01-11.77 0m0-16.746A10.234 10.234 0 0124 13.767c2.107 0 4.162.649 5.886 1.86'
-                                    stroke-linecap='square' stroke-width='1' stroke='hsla(209, 23%, 23%, 1)'
-                                    fill='none' />
-                                <path
-                                    d='M15.627 5.323a10.234 10.234 0 010-11.77m16.746 0a10.234 10.234 0 010 11.77M15.627 54.447a10.233 10.233 0 010-11.77m16.746 0a10.234 10.234 0 010 11.77m7.817-24.562a10.234 10.234 0 010-11.77m-32.379 0a10.234 10.234 0 010 11.771'
+                                <path d='M40 16h-6m-4 0h-6m8 8v-6m0-4V8M8 16H2m-4 0h-6m8 8v-6m0-4V8'
                                     stroke-linecap='square' stroke-width='1' stroke='hsla(168, 100%, 36%, 1)'
                                     fill='none' />
+                                <path d='M16-8v6m0 4v6m8-8h-6m-4 0H8m8 24v6m0 4v6m8-8h-6m-4 0H8' stroke-linecap='square'
+                                    stroke-width='1' stroke='hsla(209, 23%, 23%, 1)' fill='none' />
                             </pattern>
                         </defs>
-                        <rect width='800%' height='800%' transform='translate(0,0)' fill='url(#a)' />
+                        <rect width='800%' height='800%' transform='translate(0,0)' fill='url(#patternPM)' />
                     </svg>
-
                 </div>
             </div>
         </div>
