Resume update for 2025
Update my resume according to 2025

--- a/project-profile.html
+++ b/project-profile.html
@@ -36,7 +36,7 @@
             <div class="collapse navbar-collapse d-sm-flex justify-content-sm-end " id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">About</a>
+                        <a class="nav-link active" href="index.html">About</a>
                     </li>
 
                     <li class="nav-item">
@@ -47,12 +47,12 @@
                         <a class="nav-link " href="portfolio.html">Portfolio</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownMenuLink" role="button"
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Work
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item " href="experience.html">My Experience</a></li>
+                            <li><a class="dropdown-item" href="experience.html">My Experience</a></li>
                             <li><a class="dropdown-item" href="project-profile.html">Project Profile</a></li>
                         </ul>
                     </li>
@@ -64,11 +64,12 @@
                         </button>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton1">
                             <li><a class="dropdown-item"
-                                    href="image/Rishabh Tiwari - Full Cover Letter and Resume - 2023.pdf">Download Full
+                                    href="image/Rishabh Tiwari - Full Cover Letter and Resume - 2025.pdf">Download Full
                                     Resume</a></li>
-                            <li><a class="dropdown-item"
+                            <!-- <li><a class="dropdown-item"
                                     href="image/Rishabh Tiwari - Project Profile - 2023.pdf">Download Project
                                     Profiles</a></li>
+                            --> 
                         </ul>
                     </div>
 
@@ -92,11 +93,13 @@
                 <div class="col-12 col-md-10">
                     <div class="accordion" id="accordionExample">
 
+                          
+
                         <!-- Project Profile 1 -->
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="headingOne">
                                 <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                    data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                                     <h6 class=" mb-0 w-50 w-md-100">Infocepts Technologies Pvt. Ltd. </h6>
                                 </button>
                             </h2>
@@ -137,6 +140,34 @@
                                             small screens and Smart TVs to test the website on large screens.
                                         </li>
 
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+<!-- Project Profile 8 -->
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingEight">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
+                                    <h6 class=" mb-0 w-50 w-md-100">Savills Property Services (India) Pvt. Ltd. </h6>
+                                </button>
+                            </h2>
+                            <div id="collapseEight" class="accordion-collapse collapse" aria-labelledby="headingEight"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <ul>
+                                        <li> Led a <b>5 members design team</b> in APAC Team, guiding UI/UX delivery, allocating workloads, conducting design QA, and ensuring consistent output quality.</li>
+                                        <li> Delivered <b>10+</b> UI/UX Projects, <b>150+</b> digital design, and various marketing campaign, maintaining 100% on-time delivery and strong stakeholder satisfaction.</li>
+                                        <li>	Designed Infogram dashboards, improving data storytelling and enabling clearer reporting for business development teams. </li>
+                                        <li>	Developed <b>10+ Ceros responsive microsites</b>, boosting digital engagement and modernizing APAC campaign presentation.</li>
+                                        <li>	Produced <b>2 billion dollar valuation deal</b> Information Memorandums, 150+ pitch and presentation decks frequently within 12 to 48 hours turnaround, supporting high-value business pursuits. </li>
+                                        <li>	Created and standardized <b>90+ regional templates</b> (PowerPoint, Canva), reducing design turnaround time by <b>35 to 45%.</b></li>
+                                        <li>	Conducted <b>12+</b> company-wide Canva and design training workshops, upskilling <b>100+</b> regional team members, improving brand alignment and increasing team design capability and self-sufficiency by <b>60%.</b> </li>
+                                        <li>	Designed <b>30+ EDMs</b> (emailers) for APAC campaigns, improving click-through rates and ensuring brand consistency across all digital communications. </li>
+                                        <li>	Established streamlined workflows, reducing repetitive design tasks by <b>30%</b> and significantly improving team productivity.</li>
+                                        <li>	Provided UI/UX consulting for cross-functional teams, improving product usability and stakeholder clarity during project planning.</li>
+                                        <li>	Managed cross-country design operations for <b>12+ APAC markets</b> while delivering advanced support for web development, landing pages and interactive dashboards ensuring high-quality execution across all outputs.</li>
+                                        <li>	Served as a <b>Subject Matter Expert</b> across Figma, Ceros, Canva, and Adobe Suite, supporting regional leaders and marketing teams with complex design challenges. </li>                           
                                     </ul>
                                 </div>
                             </div>
@@ -357,8 +388,7 @@
                             </div>
                         </div>
 
-
-
+                       
 
                     </div>
                 </div>
