--- a/experience.html
+++ b/experience.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-    <!-- Nav bar -->
+   <!-- Nav bar -->
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand" href="index.html">Rishabh Tiwari</a>
@@ -36,7 +36,7 @@
             <div class="collapse navbar-collapse d-sm-flex justify-content-sm-end " id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">About</a>
+                        <a class="nav-link active" href="index.html">About</a>
                     </li>
 
                     <li class="nav-item">
@@ -47,12 +47,12 @@
                         <a class="nav-link " href="portfolio.html">Portfolio</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownMenuLink" role="button"
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Work
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item " href="experience.html">My Experience</a></li>
+                            <li><a class="dropdown-item" href="experience.html">My Experience</a></li>
                             <li><a class="dropdown-item" href="project-profile.html">Project Profile</a></li>
                         </ul>
                     </li>
@@ -64,11 +64,12 @@
                         </button>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton1">
                             <li><a class="dropdown-item"
-                                    href="image/Rishabh Tiwari - Full Cover Letter and Resume - 2023.pdf">Download Full
+                                    href="image/Rishabh Tiwari - Full Cover Letter and Resume - 2025.pdf">Download Full
                                     Resume</a></li>
-                            <li><a class="dropdown-item"
+                            <!-- <li><a class="dropdown-item"
                                     href="image/Rishabh Tiwari - Project Profile - 2023.pdf">Download Project
                                     Profiles</a></li>
+                            --> 
                         </ul>
                     </div>
 
@@ -135,12 +136,33 @@
             </div>
         </div>
 
-
-        <!--Experience 1-->
+<!--Experience 1-->
         <div class="row mt-4">
             <div class="experience-bg row">
                 <div class="col-2 d-md-flex align-items-center">
                     <h1 class=" extra_large fw-bold m-0 flip">01</h1>
+                </div>
+                <div class="col-8">
+                    <h3 class="fw-bold m-0">Savills Property Service (INDIA)  Pvt. Ltd.</h3>
+                    <h6 class=" mb-0">UX/UI & Design Assistant Manager.</h6>
+                    <p class=" mb-1 text_small text_small">Feb 2024 to Present.</p>
+                    <img src="image/logo/company-logo/10 - Savills Logo.png"
+                        class="img-fluid border-0 d-block d-md-none py-2 w-50" alt="Savills Logo">
+
+                    <p class="text_small "> At Savills, I led the APAC design and UI/UX function, guiding a high-performing team while delivering high-quality digital experiences across multiple markets. I oversaw end-to-end design execution—from UI/UX, Ceros microsites, and Infogram dashboards to IMs, pitch decks, and large-scale brand templates. I collaborated closely with regional stakeholders, ensured consistent brand excellence, and drove efficient processes that elevated design quality across the Asia Pacific region. Through strong leadership, clear communication, and hands-on expertise, I consistently delivered impactful results and helped the team grow, perform, and exceed expectations. </p>
+                </div>
+                <div class="col-2 d-none d-sm-block">
+                    <img src="image/logo/company-logo/10 - Savills Logo.png" class="img-fluid border-0"
+                        alt="Savills Logo">
+                </div>
+            </div>
+        </div>
+
+        <!--Experience 2-->
+        <div class="row mt-4">
+            <div class="experience-bg row">
+                <div class="col-2 d-md-flex align-items-center">
+                    <h1 class=" extra_large fw-bold m-0 flip">02</h1>
                 </div>
                 <div class="col-8">
                     <h3 class="fw-bold m-0">Infocepts Technologies Pvt. Ltd.</h3>
@@ -168,11 +190,11 @@
             </div>
         </div>
 
-        <!--Experience 2-->
+        <!--Experience 3-->
         <div class="row mt-4">
             <div class="experience-bg row">
                 <div class="col-2 d-md-flex align-items-center">
-                    <h1 class=" extra_large fw-bold m-0 flip">02</h1>
+                    <h1 class=" extra_large fw-bold m-0 flip">03</h1>
                 </div>
                 <div class="col-8">
                     <h3 class="fw-bold m-0">Jewel Pro-Tech Pvt. Ltd.</h3>
@@ -197,11 +219,11 @@
             </div>
         </div>
 
-        <!--Experience 3-->
+        <!--Experience 4-->
         <div class="row mt-4">
             <div class="experience-bg row">
                 <div class="col-2 d-md-flex align-items-center">
-                    <h1 class=" extra_large fw-bold m-0 flip">03</h1>
+                    <h1 class=" extra_large fw-bold m-0 flip">04</h1>
                 </div>
                 <div class="col-8">
                     <h3 class="fw-bold m-0">Angel Convent School</h3>
@@ -232,16 +254,16 @@
             </div>
         </div>
 
-        <!--Experience 4-->
+        <!--Experience 5-->
         <div class="row mt-4">
             <div class="experience-bg row">
                 <div class="col-2 d-md-flex align-items-center">
-                    <h1 class=" extra_large fw-bold m-0 flip">04</h1>
+                    <h1 class=" extra_large fw-bold m-0 flip">05</h1>
                 </div>
                 <div class="col-8">
                     <h3 class="fw-bold m-0">Freelancing &amp Remote Work</h3>
                     <h6 class=" mb-0">Graphic &amp UI Designer.</h6>
-                    <p class=" mb-1 text_small text_small">Mar 2017 to May 2021</p>
+                    <p class=" mb-1 text_small text_small">Mar 2017 to May 2021 / July 2023 to Jan 2024.</p>
 
                     <img src="image/logo/company-logo/6 - RECT Logo.png"
                         class="img-fluid border-0 d-block d-md-none py-2 w-50"
@@ -266,11 +288,11 @@
             </div>
         </div>
 
-        <!--Experience 5-->
+        <!--Experience 6-->
         <div class="row mt-4">
             <div class="experience-bg row">
                 <div class="col-2 d-md-flex align-items-center">
-                    <h1 class=" extra_large fw-bold m-0 flip">05</h1>
+                    <h1 class=" extra_large fw-bold m-0 flip">06</h1>
                 </div>
                 <div class="col-8">
                     <h3 class="fw-bold m-0">The Climber Knowledge Pvt. Ltd.</h3>
@@ -298,11 +320,11 @@
         </div>
 
 
-        <!--Experience 6-->
+        <!--Experience 7-->
         <div class="row mt-4">
             <div class="experience-bg row">
                 <div class="col-2 d-md-flex align-items-center">
-                    <h1 class=" extra_large fw-bold m-0 flip">06</h1>
+                    <h1 class=" extra_large fw-bold m-0 flip">07</h1>
                 </div>
                 <div class="col-8">
                     <h3 class="fw-bold m-0">Ediome</h3>
@@ -324,11 +346,11 @@
         </div>
 
 
-        <!--Experience 7-->
+        <!--Experience 8-->
         <div class="row mt-4">
             <div class="experience-bg row">
                 <div class="col-2 d-md-flex align-items-center">
-                    <h1 class=" extra_large fw-bold m-0 flip">07</h1>
+                    <h1 class=" extra_large fw-bold m-0 flip">08</h1>
                 </div>
                 <div class="col-8">
                     <h3 class="fw-bold m-0">Infinity Infoway Pvt. Ltd.</h3>
@@ -353,11 +375,11 @@
         </div>
 
 
-        <!--Experience 8-->
+        <!--Experience 9-->
         <div class="row mt-4">
             <div class="experience-bg row border-0">
                 <div class="col-2 d-md-flex align-items-center">
-                    <h1 class=" extra_large fw-bold m-0 flip">08</h1>
+                    <h1 class=" extra_large fw-bold m-0 flip">09</h1>
                 </div>
                 <div class="col-8">
                     <h3 class="fw-bold m-0">Freelancing &amp Remote Work</h3>
