--- a/index.html
+++ b/index.html
@@ -63,11 +63,12 @@
                         </button>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton1">
                             <li><a class="dropdown-item"
-                                    href="image/Rishabh Tiwari - Full Cover Letter and Resume - 2023.pdf">Download Full
+                                    href="image/Rishabh Tiwari - Full Cover Letter and Resume - 2025.pdf">Download Full
                                     Resume</a></li>
-                            <li><a class="dropdown-item"
+                            <!-- <li><a class="dropdown-item"
                                     href="image/Rishabh Tiwari - Project Profile - 2023.pdf">Download Project
                                     Profiles</a></li>
+                            --> 
                         </ul>
                     </div>
 
@@ -103,7 +104,7 @@
                         <li class="list-group-item text_small pb-0">Contact Number - +91 99136 14651.</li>
                     </ul>
                     <div>
-                        <a href="image/Rishabh Tiwari - Full Cover Letter and Resume - 2023.pdf"> <button type="button"
+                        <a href="image/Rishabh Tiwari - Full Cover Letter and Resume - 2025.pdf"> <button type="button"
                                 class="btn btn-main">Download Resume</button></a>
 
                     </div>
@@ -153,6 +154,7 @@
                                 <p class="text_small pe-2 m-0 "> Adobe XD </p>
                                 <p class="text_small pe-2 m-0"> Adobe Suit </p>
                                 <p class="text_small pe-2 m-0"> Prototyping </p>
+                                <p class="text_small pe-2 m-0"> Ceros </p>
                             </li>
                             <li class="d-flex flex-wrap  align-items-center mt-2">
                                 <p class="text_small pe-2 fw-bold m-0"> UX Design </p>
@@ -279,6 +281,7 @@
                                 <p class="text_small pe-2 m-0"> Task Delegation</p>
                                 <p class="text_small pe-2 m-0"> Conflict Resolution</p>
                                 <p class="text_small pe-2 m-0"> Agile Project Management</p>
+                                <p class="text_small pe-2 m-0"> Teamwork </p>
                             </li>
                             <li class="d-flex flex-wrap  align-items-center mt-2">
                                 <p class="text_small pe-2 fw-bold m-0"> Client-Facing Experience </p>
@@ -325,6 +328,10 @@
             </div>
             <div class="col-12">
                 <div class="d-flex flex-wrap">
+                    <div class="col-4 col-md-2  pe-2 py-2">
+                        <img src="image/logo/company-logo/10 - Savills Logo.png" class="img-fluid border-0"
+                            alt="Svaills Logo">
+                    </div>
                     <div class="col-4 col-md-2  pe-2 py-2">
                         <img src="image/logo/company-logo/1 - Infocepts-Data-AI-logo.png" class="img-fluid border-0"
                             alt="Infocepts Logo">
