--- a/portfolio.html
+++ b/portfolio.html
@@ -38,15 +38,15 @@
             <div class="collapse navbar-collapse d-sm-flex justify-content-sm-end " id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">About</a>
+                        <a class="nav-link active" href="index.html">About</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link " href="service.html">Service</a>
+                        <a class="nav-link" href="service.html">Service</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link active" href="portfolio.html">Portfolio</a>
+                        <a class="nav-link " href="portfolio.html">Portfolio</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
@@ -59,8 +59,6 @@
                         </ul>
                     </li>
 
-
-
                     <div class="dropdown">
                         <button class="btn btn-main dropdown-toggle" type="button" id="dropdownMenuButton1"
                             data-bs-toggle="dropdown" aria-expanded="false">
@@ -68,11 +66,12 @@
                         </button>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton1">
                             <li><a class="dropdown-item"
-                                    href="image/Rishabh Tiwari - Full Cover Letter and Resume - 2023.pdf">Download Full
+                                    href="image/Rishabh Tiwari - Full Cover Letter and Resume - 2025.pdf">Download Full
                                     Resume</a></li>
-                            <li><a class="dropdown-item"
+                            <!-- <li><a class="dropdown-item"
                                     href="image/Rishabh Tiwari - Project Profile - 2023.pdf">Download Project
                                     Profiles</a></li>
+                            --> 
                         </ul>
                     </div>
 
