--- a/service.html
+++ b/service.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-    <!-- Nav bar -->
+   <!-- Nav bar -->
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand" href="index.html">Rishabh Tiwari</a>
@@ -37,11 +37,11 @@
             <div class="collapse navbar-collapse d-sm-flex justify-content-sm-end " id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">About</a>
+                        <a class="nav-link active" href="index.html">About</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link active" href="service.html">Service</a>
+                        <a class="nav-link" href="service.html">Service</a>
                     </li>
 
                     <li class="nav-item">
@@ -65,11 +65,12 @@
                         </button>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton1">
                             <li><a class="dropdown-item"
-                                    href="image/Rishabh Tiwari - Full Cover Letter and Resume - 2023.pdf">Download Full
+                                    href="image/Rishabh Tiwari - Full Cover Letter and Resume - 2025.pdf">Download Full
                                     Resume</a></li>
-                            <li><a class="dropdown-item"
+                            <!-- <li><a class="dropdown-item"
                                     href="image/Rishabh Tiwari - Project Profile - 2023.pdf">Download Project
                                     Profiles</a></li>
+                            --> 
                         </ul>
                     </div>
 
