Jan 2026 resume update
Update my resume according to 2026

--- a/experience.html
+++ b/experience.html
@@ -64,12 +64,8 @@
                         </button>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton1">
                             <li><a class="dropdown-item"
-                                    href="image/Rishabh Tiwari - Full Cover Letter and Resume - 2025.pdf">Download Full
+                                    href="image/Rishabh Tiwari - Updated CV - 2026.pdf">Download Full
                                     Resume</a></li>
-                            <!-- <li><a class="dropdown-item"
-                                    href="image/Rishabh Tiwari - Project Profile - 2023.pdf">Download Project
-                                    Profiles</a></li>
-                            --> 
                         </ul>
                     </div>
 
