--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <body>
     <!-- Nav bar -->
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand" href="index.html">Rishabh Tiwari</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
@@ -63,12 +63,8 @@
                         </button>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton1">
                             <li><a class="dropdown-item"
-                                    href="image/Rishabh Tiwari - Full Cover Letter and Resume - 2025.pdf">Download Full
+                                    href="image/Rishabh Tiwari - Updated CV - 2026.pdf">Download Full
                                     Resume</a></li>
-                            <!-- <li><a class="dropdown-item"
-                                    href="image/Rishabh Tiwari - Project Profile - 2023.pdf">Download Project
-                                    Profiles</a></li>
-                            --> 
                         </ul>
                     </div>
 
