--- a/project-profile -v2.html
+++ b/project-profile -v2.html
@@ -26,7 +26,7 @@
 
 <body>
     <!-- Nav bar -->
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+   <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand" href="index.html">Rishabh Tiwari</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
@@ -36,7 +36,7 @@
             <div class="collapse navbar-collapse d-sm-flex justify-content-sm-end " id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">About</a>
+                        <a class="nav-link active" href="index.html">About</a>
                     </li>
 
                     <li class="nav-item">
@@ -47,12 +47,12 @@
                         <a class="nav-link " href="portfolio.html">Portfolio</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownMenuLink" role="button"
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Work
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item " href="experience.html">My Experience</a></li>
+                            <li><a class="dropdown-item" href="experience.html">My Experience</a></li>
                             <li><a class="dropdown-item" href="project-profile.html">Project Profile</a></li>
                         </ul>
                     </li>
@@ -64,11 +64,8 @@
                         </button>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton1">
                             <li><a class="dropdown-item"
-                                    href="image/Rishabh Tiwari - Full Cover Letter and Resume - 2023.pdf">Download Full
+                                    href="image/Rishabh Tiwari - Updated CV - 2026.pdf">Download Full
                                     Resume</a></li>
-                            <li><a class="dropdown-item"
-                                    href="image/Rishabh Tiwari - Project Profile - 2023.pdf">Download Project
-                                    Profiles</a></li>
                         </ul>
                     </div>
 
@@ -76,7 +73,6 @@
             </div>
         </div>
     </nav>
-
     <!-- Work- Section 1 - Education -->
     <div class="container custom-padding">
         <div class="row">
