--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <li class="list-group-item text_small pb-0">Contact Number - +91 99136 14651.</li>
                     </ul>
                     <div>
-                        <a href="image/Rishabh Tiwari - Full Cover Letter and Resume - 2025.pdf"> <button type="button"
+                        <a href="image/Rishabh Tiwari - Updated CV - 2026.pdf"> <button type="button"
                                 class="btn btn-main">Download Resume</button></a>
 
                     </div>
